--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
 		"emitDecoratorMetadata": true,
 		"module": "commonjs",
 		"esModuleInterop": true,
+		// "moduleResolution": "node",
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"strictPropertyInitialization": false,
